--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,8 +1,5 @@
-<h1>Doses#new</h1>
-<p>Find me in app/views/doses/new.html.erb</p>
-<%= simple_form_for(@dose) do |f| %>
-<%= f.input :description "Description" %>
-<%= f.input : "Description" %>
-
+<%= simple_form_for [@cocktail, @dose] do |f| %>
+  <%= f.input :description, label: "Description" %>
+  <%= f.input :ingredient_id, collection: Ingredient.all %>
+  <%= f.submit %>
 <% end %>
-
