--- a/app/views/doses/edit.html.erb
+++ b/app/views/doses/edit.html.erb
@@ -1,2 +1,5 @@
 <h1>Doses#edit</h1>
-<p>Find me in app/views/doses/edit.html.erb</p>
+<%= simple_form_for [@cocktail, @dose] do |f| %>
+  <%= f.input :description, label: "Description" %>
+  <%= f.input :ingredient_id, collection: Ingredient.all %>
+<% end %>
