--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,3 +1,6 @@
+
+<h1>All Cocktails</h1>
+<%= link_to "Add new cocktail", new_cocktail_path %>
 <% if !@cocktails.blank? %>
   <% for item in @cocktails %>
     <p><%= link_to "#{item.name}", cocktail_path(item) %></p>
