--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,2 +1,8 @@
 <h1>Cocktails#new</h1>
 <p>Find me in app/views/cocktails/new.html.erb</p>
+<hr>
+<%= simple_form_for(@cocktail) do |f| %>
+  <%= f.input :name, label:"Cocktail name" %>
+  <%= f.input :photo, as: :attachinary %>
+  <%= f.submit %>
+<% end %>
