--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,10 @@
 <h1>Cocktails#show</h1>
 <p>Find me in app/views/cocktails/show.html.erb</p>
 <hr>
+<% if @cocktail.photo? %>
+  <p></p>
+  <%= cl_image_tag @cocktail.photo.path, width: 200, height: 300, crop: :fill %>
+<% end %>
 <% if !@doses.blank? %>
  <h2>Doses in <%= @cocktail.name %>:</h2>
  <ul>
