--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,11 @@
   background-position: center;
   color: white;
   position: relative;
+  border-radius: 3px;
+  margin: 12px;
+  margin-left: 3px;
+  margin-right: 3px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.6);
 }
 .card-user {
   position: absolute;
@@ -45,4 +50,8 @@
 }
 .card-link:hover {
   opacity: 0.1;
+}
+.container {
+  background-color: rgba(0,0,0,0.1);
+  border: 1px solid rgba(0,0,0,0.3);
 }
