--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,7 +3,7 @@
 <hr>
 <% if @cocktail.photo? %>
   <p></p>
-  <%= cl_image_tag @cocktail.photo.path, width: 200, height: 300, crop: :fill %>
+  <%= cl_image_tag @cocktail.photo.path, height: 400, width: 300, crop: :fit %>
 <% end %>
 <% if !@doses.blank? %>
  <h2>Doses in <%= @cocktail.name %>:</h2>
