--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,20 +1,12 @@
 
-<h1>All Cocktails</h1>
+<h1 class="text-center">All Cocktails</h1>
 <%= link_to "Add new cocktail", new_cocktail_path %>
 <hr>
 <% if !@cocktails.blank? %>
 <div class="container">
   <div class="row">
   <% for cocktail in @cocktails %>
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path cocktail.photo.path, height: 400, width: 300, crop: :fit %>')">
-  <div class="card-description">
-    <h2><%= cocktail.name %></h2>
-    <p>placeholder text</p>
-  </div>
-  <%= link_to "", cocktail_path(cocktail), class: "card-link"  %>
-  </div>
-  </div>
+    <%= render 'shared/card', cocktail: cocktail %>
   <% end %>
   </div>
 </div>
