--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,11 +5,7 @@
   background-position: center;
   color: white;
   position: relative;
-  border-radius: 3px;
-  margin: 12px;
-  margin-left: 3px;
-  margin-right: 3px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  margin-bottom: 0px;
 }
 .card-user {
   position: absolute;
@@ -51,8 +47,31 @@
 .card-link:hover {
   opacity: 0.1;
 }
-.container {
-  background-color: rgba(0,0,0,0.1);
-  border: 1px solid rgba(0,0,0,0.3);
+.card-bottom {
+  position: relative;
+  bottom: 0px;
+  background-color: rgb(40, 40, 40);
+  width: 100%;
+  height: 60px;
+  margin-top: 0px;
+}
+.card-bottom-text {
+  position: absolute;
+  justify-content: center;
+  top: 15px;
+  left: 15px;
+  color: rgb(240, 240, 240);
+  opacity: 0.7;
+}
+.card-bottom-text:hover {
+  color: rgb(240, 240, 240);
+  text-decoration: none;
+  opacity: 1;
+}
+.entire-card {
   box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  border-radius: 3px;
+  margin: 12px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
