--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -14,3 +14,5 @@
 <% end %>
 </ul>
 <%= link_to "Add new dose", new_cocktail_dose_path(@cocktail) %>
+<hr>
+<%= link_to "Remove this cocktail", cocktail_path(@cocktail), method: :delete %>
