--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for(@cocktail) do |f| %>
   <%= f.input :name, label:"Cocktail name" %>
-  <%= f.input :photo, as: :attachinary %>
+  <%= f.input :photos, as: :attachinary %>
   <%= f.submit %>
 <% end %>
