--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,6 +1,6 @@
 <div class="col-xs-12 col-sm-6 col-md-4">
   <div class="entire-card">
-    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path cocktail.photo.path, height: 400, width: 300, crop: :fit %>')">
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path cocktail.photos.first.path, height: 400, width: 300, crop: :fit %>')">
       <div class="card-description">
         <h2><%= cocktail.name %></h2>
         <p>placeholder text</p>
